{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 247,
  "lineage": "bf883151-915b-0d96-5a2b-e1d52b171472",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9f0f6fdc532d65e",
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:elastic-ip/eipalloc-0a9f0f6fdc532d65e",
            "association_id": "eipassoc-0d7dc530dae50f336",
            "domain": "vpc",
            "id": "eipalloc-0a9f0f6fdc532d65e",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01bc705603b56d17e",
            "private_dns": "ip-10-30-1-82.ap-northeast-1.compute.internal",
            "private_ip": "10.30.1.82",
            "public_dns": "ec2-18-178-29-31.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.29.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-nat-eip",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-nat-eip",
              "Project": "cms-community"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0410627c95c2f007f",
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:instance/i-0e9716db577c75857",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9716db577c75857",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cms-project-tokyo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e2ebe15e3f5993b",
            "private_dns": "ip-10-30-1-141.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.141",
            "public_dns": "ec2-18-182-55-5.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.55.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ca382da963452c5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0407a839893680951",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-bastion",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-bastion",
              "Project": "cms-community"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c2c16e36f7229d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.ecs",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:internet-gateway/igw-06cfd820afad0dc1d",
            "id": "igw-06cfd820afad0dc1d",
            "owner_id": "897722691159",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-igw",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-igw",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/app/cms-community-alb/001efe9617020d30",
            "arn_suffix": "app/cms-community-alb/001efe9617020d30",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cms-community-alb-1106724923.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/app/cms-community-alb/001efe9617020d30",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cms-community-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06e488be9db3677ec"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0407a839893680951"
              },
              {
                "subnet_id": "subnet-069a672da59928c14"
              }
            ],
            "subnets": [
              "subnet-0407a839893680951",
              "subnet-069a672da59928c14"
            ],
            "tags": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/net/cms-community-mon-nlb/ffbff355b06c0244",
            "arn_suffix": "net/cms-community-mon-nlb/ffbff355b06c0244",
            "dns_name": "cms-community-mon-nlb-ffbff355b06c0244.elb.ap-northeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/net/cms-community-mon-nlb/ffbff355b06c0244",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cms-community-mon-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b7392b801def65b"
              },
              {
                "subnet_id": "subnet-051eb100160b80207"
              }
            ],
            "subnets": [
              "subnet-04b7392b801def65b",
              "subnet-051eb100160b80207"
            ],
            "tags": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:listener/app/cms-community-alb/001efe9617020d30/0fd14ce24e8a71c8",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:897722691159:certificate/731845b9-5734-4fab-8a39-9b7b6639d03a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-tg/29a29cb8637b51b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:listener/app/cms-community-alb/001efe9617020d30/0fd14ce24e8a71c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/app/cms-community-alb/001efe9617020d30",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb",
            "aws_acm_certificate_validation.alb",
            "aws_lb.app",
            "aws_lb_target_group.ecs",
            "aws_route53_record.alb_validation",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "monitoring_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:listener/net/cms-community-mon-nlb/ffbff355b06c0244/5e7afad62aff471e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-mon-gf3/89977b3c1b96ced7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:listener/net/cms-community-mon-nlb/ffbff355b06c0244/5e7afad62aff471e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/net/cms-community-mon-nlb/ffbff355b06c0244",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.monitoring",
            "aws_lb_target_group.monitoring_grafana",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "monitoring_prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:listener/net/cms-community-mon-nlb/ffbff355b06c0244/73411d28a898e7d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-mon-pr3/07837d31a328460c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:listener/net/cms-community-mon-nlb/ffbff355b06c0244/73411d28a898e7d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/net/cms-community-mon-nlb/ffbff355b06c0244",
            "mutual_authentication": [],
            "port": 9090,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.monitoring",
            "aws_lb_target_group.monitoring_prometheus",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-tg/29a29cb8637b51b4",
            "arn_suffix": "targetgroup/cms-community-tg/29a29cb8637b51b4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-tg/29a29cb8637b51b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/app/cms-community-alb/001efe9617020d30"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cms-community-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "monitoring_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-mon-gf3/89977b3c1b96ced7",
            "arn_suffix": "targetgroup/cms-community-mon-gf3/89977b3c1b96ced7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-mon-gf3/89977b3c1b96ced7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/net/cms-community-mon-nlb/ffbff355b06c0244"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cms-community-mon-gf3",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "monitoring_prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-mon-pr3/07837d31a328460c",
            "arn_suffix": "targetgroup/cms-community-mon-pr3/07837d31a328460c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:targetgroup/cms-community-mon-pr3/07837d31a328460c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:897722691159:loadbalancer/net/cms-community-mon-nlb/ffbff355b06c0244"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cms-community-mon-pr3",
            "port": 9090,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "cms-community"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9f0f6fdc532d65e",
            "association_id": "eipassoc-0d7dc530dae50f336",
            "connectivity_type": "public",
            "id": "nat-074240373a725c712",
            "network_interface_id": "eni-01bc705603b56d17e",
            "private_ip": "10.30.1.82",
            "public_ip": "18.178.29.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0407a839893680951",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-nat",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-nat",
              "Project": "cms-community"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:route-table/rtb-09c3c6d871e92ca38",
            "id": "rtb-09c3c6d871e92ca38",
            "owner_id": "897722691159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-074240373a725c712",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-private-rt",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-private-rt",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:route-table/rtb-03b38f36ee3c25b17",
            "id": "rtb-03b38f36ee3c25b17",
            "owner_id": "897722691159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cfd820afad0dc1d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-public-rt",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-public-rt",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.30.11.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1059fa3bddd314d",
            "route_table_id": "rtb-09c3c6d871e92ca38",
            "subnet_id": "subnet-04b7392b801def65b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.30.12.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02da54386313618bc",
            "route_table_id": "rtb-09c3c6d871e92ca38",
            "subnet_id": "subnet-051eb100160b80207"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.30.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a1cb3d3c769bc6d",
            "route_table_id": "rtb-03b38f36ee3c25b17",
            "subnet_id": "subnet-0407a839893680951"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.30.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8a88eca46568725",
            "route_table_id": "rtb-03b38f36ee3c25b17",
            "subnet_id": "subnet-069a672da59928c14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:security-group/sg-06e488be9db3677ec",
            "description": "Allow HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e488be9db3677ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cms-community-alb-sg",
            "name_prefix": "",
            "owner_id": "897722691159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-alb-sg",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-alb-sg",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:security-group/sg-099c2c16e36f7229d",
            "description": "Allow SSH from allow list",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099c2c16e36f7229d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to reach Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcbc38acb908bc3"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to reach Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcbc38acb908bc3"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "cms-community-bastion-sg",
            "name_prefix": "",
            "owner_id": "897722691159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-bastion-sg",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-bastion-sg",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:security-group/sg-02bcbc38acb908bc3",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bcbc38acb908bc3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB to ECS",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e488be9db3677ec"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cms-community-ecs-sg",
            "name_prefix": "",
            "owner_id": "897722691159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-ecs-sg",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-ecs-sg",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:security-group/sg-0d58c9f0dab55028d",
            "description": "Allow Grafana/Prometheus within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d58c9f0dab55028d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "Grafana from backend ECS",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcbc38acb908bc3"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Prometheus from backend ECS",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcbc38acb908bc3"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "cms-community-monitoring-sg",
            "name_prefix": "",
            "owner_id": "897722691159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-monitoring-sg",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-monitoring-sg",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:security-group/sg-05a5e6845ec793275",
            "description": "Allow MySQL from ECS and bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a5e6845ec793275",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcbc38acb908bc3"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099c2c16e36f7229d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cms-community-rds-sg",
            "name_prefix": "",
            "owner_id": "897722691159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-rds-sg",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-rds-sg",
              "Project": "cms-community"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.30.11.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:subnet/subnet-04b7392b801def65b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b7392b801def65b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722691159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-private-1",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-private-1",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.30.12.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:subnet/subnet-051eb100160b80207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051eb100160b80207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722691159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-private-2",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-private-2",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.30.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:subnet/subnet-0407a839893680951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0407a839893680951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722691159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-public-1",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-public-1",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.30.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:subnet/subnet-069a672da59928c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069a672da59928c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722691159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-public-2",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-public-2",
              "Project": "cms-community"
            },
            "vpc_id": "vpc-0d0de629c611f3f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:897722691159:vpc/vpc-0d0de629c611f3f04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0cee2d3c1f1ad1628",
            "default_route_table_id": "rtb-089df343bc46e0589",
            "default_security_group_id": "sg-0a47c354756e28ac5",
            "dhcp_options_id": "dopt-00f1f9e6b03f1d1e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0de629c611f3f04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089df343bc46e0589",
            "owner_id": "897722691159",
            "tags": {
              "Environment": "prod",
              "Name": "cms-community-vpc",
              "Project": "cms-community"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "cms-community-vpc",
              "Project": "cms-community"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}